==> nanoframework/nf-interpreter/targets/CMSIS-OS/ChibiOS/nanoCLR/Windows.Devices.Spi/CPU_SPI.cpp <==
#include <ch.h>
#include <hal.h>
#include <cmsis_os.h>
#include <LaunchCLR.h>
#include <string.h>
#include <targetPAL.h>
#include <win_dev_spi_native_target.h>
#include <hal.h>

HRESULT CPU_SPI_nWrite_nRead(
    uint32_t deviceHandle,
    SPI_DEVICE_CONFIGURATION &sdev,
    SPI_WRITE_READ_SETTINGS &wrc,
    uint8_t *writeBuffer,
    int32_t writeSize,
    uint8_t *readBuffer,
    int32_t readSize)
{
    NANOCLR_HEADER();
    {
        NF_PAL_SPI *palSpi = (NF_PAL_SPI *)deviceHandle;
        bool sync = (wrc.callback == 0); // If callback then use aync operation

        // Save width of transfer
        palSpi->BufferIs16bits = wrc.Bits16ReadWrite;

        // Callback sync / async
        palSpi->Callback = wrc.callback;

        if (writeBuffer != NULL)
        {
            palSpi->WriteSize = writeSize;
        }

        if (readBuffer != NULL)
        {
            palSpi->ReadSize = readSize;
        }

        // === Setup the operation and init buffers ===
        palSpi->BusIndex = sdev.Spi_Bus;

        // get the LL SPI configuration, depending on passed parameters and buffer element size
        GetSPIConfig(sdev, wrc, &palSpi->Configuration);

        // Clear callback if sync
        if (sync)
            palSpi->Configuration.end_cb = NULL;

        if (writeBuffer != NULL)
        {
            // set the pointer to the write buffer as BYTE
            palSpi->WriteBuffer = (uint8_t *)writeBuffer;

            // set DMA write buffer
            if (palSpi->BufferIs16bits)
            {
                // flush DMA buffer to ensure cache coherency
                // (only required for Cortex-M7)
                cacheBufferFlush(palSpi->WriteBuffer, (palSpi->WriteSize * 2));
            }
            else
            {
                // flush DMA buffer to ensure cache coherency
                // (only required for Cortex-M7)
                cacheBufferFlush(palSpi->WriteBuffer, palSpi->WriteSize);
            }
        }

        if (readBuffer != NULL)
        {
            // set DMA read buffer
            if (palSpi->ReadSize > 0)
            {
                palSpi->ReadBuffer = (uint8_t *)readBuffer;
            }
        }

        // because the bus access is shared, acquire and select the appropriate bus
        spiAcquireBus(palSpi->Driver);
        spiStart(palSpi->Driver, &palSpi->Configuration);

        // just to satisfy the driver ceremony, no actual implementation for STM32
        spiSelect(palSpi->Driver);

        if (sync)
        {
            // Sync operation
            // perform SPI operation using driver's SYNC API
            if (palSpi->WriteSize != 0 && palSpi->ReadSize != 0)
            {
                // Transmit+Receive
                if (wrc.fullDuplex)
                {
                    // Full duplex
                    // Uses the largest buffer size as transfer size
                    spiExchange(
                        palSpi->Driver,
                        palSpi->WriteSize > palSpi->ReadSize ? palSpi->WriteSize : palSpi->ReadSize,
                        palSpi->WriteBuffer,
                        palSpi->ReadBuffer);
                }
                else
                {
                    // send operation
                    spiSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                    // receive operation
                    spiReceive(palSpi->Driver, palSpi->ReadSize, palSpi->ReadBuffer);
                }
            }
            else
            {
                // Transmit only or Receive only
                if (palSpi->ReadSize != 0)
                {
                    // receive
                    spiReceive(palSpi->Driver, palSpi->ReadSize, palSpi->ReadBuffer);
                }
                else
                {
                    // send
                    spiSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                }
            }

            // Release bus & cacheBufferInvalidate etc
            CompleteTranfer(palSpi);
        }
        else
        // Start an Asyncronous SPI transfer
        // perform SPI operation using driver's ASYNC API
        // Completed on calling Spi Callback
        {
            // this is a Async operation
            // perform SPI operation using driver's ASYNC API
            if (palSpi->WriteSize != 0 && palSpi->ReadSize != 0)
            {
                // Transmit+Receive
                if (wrc.fullDuplex)
                {
                    // Full duplex
                    // single operation, clear flag
                    palSpi->SequentialTxRx = false;

                    // Uses the largest buffer size as transfer size
                    spiStartExchange(
                        palSpi->Driver,
                        palSpi->WriteSize > palSpi->ReadSize ? palSpi->WriteSize : palSpi->ReadSize,
                        palSpi->WriteBuffer,
                        palSpi->ReadBuffer);
                }
                else
                {
                    // flag that an Rx is required after the Tx operation completes
                    palSpi->SequentialTxRx = true;

                    // start send operation
                    spiStartSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                    // receive operation will be started in the callback after the above completes
                }
            }
            else
            {
                // Transmit only or Receive only
                if (palSpi->ReadSize != 0)
                {
                    // single operation, clear flag
                    palSpi->SequentialTxRx = false;

                    // start receive
                    spiStartReceive(palSpi->Driver, palSpi->ReadSize, palSpi->ReadBuffer);
                }
                else
                {
                    // single operation, clear flag
                    palSpi->SequentialTxRx = false;

                    // start send
                    spiStartSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                }
            }

            // Inform caller async operation started
            NANOCLR_SET_AND_LEAVE(CLR_E_BUSY);
        }
    }

    NANOCLR_NOCLEANUP();
}

SPI_OP_STATUS CPU_SPI_OP_Status(uint8_t spi_bus, uint32_t deviceHandle)
{
    (void)spi_bus;

    NF_PAL_SPI *palSpi = (NF_PAL_SPI *)deviceHandle;
    SPI_OP_STATUS os;

    switch (palSpi->Driver->state)
    {
        default:
        case SPI_UNINIT:
        case SPI_STOP:
        case SPI_READY:
            os = SPI_OP_READY;
            break;

        case SPI_ACTIVE:
            os = SPI_OP_RUNNING;
            break;

        case SPI_COMPLETE:
            os = SPI_OP_COMPLETE;
            break;
    }
    return os;
}

bool CPU_SPI_Initialize(uint8_t busIndex)
{
    // init the PAL struct for this SPI bus and assign the respective driver
    // all this occurs if not already done
    // why do we need this? because several SPIDevice objects can be created associated to the same bus
    switch (busIndex + 1)
    {
#if STM32_SPI_USE_SPI1
        case 1:
            if (SPI1_PAL.Driver == NULL)
            {
                ConfigPins_SPI1();
                SPI1_PAL.Driver = &SPID1;
            }
            break;
#endif
#if STM32_SPI_USE_SPI2
        case 2:
            if (SPI2_PAL.Driver == NULL)
            {
                ConfigPins_SPI2();
                SPI2_PAL.Driver = &SPID2;
            }
            break;
#endif
#if STM32_SPI_USE_SPI3
        case 3:
            if (SPI3_PAL.Driver == NULL)
            {
                ConfigPins_SPI3();
                SPI3_PAL.Driver = &SPID3;
            }
            break;
#endif
#if STM32_SPI_USE_SPI4
        case 4:
            if (SPI4_PAL.Driver == NULL)
            {
                ConfigPins_SPI4();
                SPI4_PAL.Driver = &SPID4;
            }
            break;
#endif
#if STM32_SPI_USE_SPI5
        case 5:
            if (SPI5_PAL.Driver == NULL)
            {
                ConfigPins_SPI5();
                SPI5_PAL.Driver = &SPID5;
            }
            break;
#endif
#if STM32_SPI_USE_SPI6
        case 6:
            if (SPI6_PAL.Driver == NULL)
            {
                ConfigPins_SPI6();
                SPI6_PAL.Driver = &SPID6;
            }
            break;
#endif
        default:
            // this SPI bus is not valid
            return false;
    }

    return true;
}

bool CPU_SPI_Uninitialize(uint8_t busIndex)
{
    // get the PAL struct for the SPI bus
    switch (busIndex + 1)
    {
#if STM32_SPI_USE_SPI1
        case 1:
            spiStop(&SPID1);
            SPI1_PAL.Driver = NULL;
            spiReleaseBus(&SPID1);
            break;
#endif

#if STM32_SPI_USE_SPI2
        case 2:
            spiStop(&SPID2);
            SPI2_PAL.Driver = NULL;
            spiReleaseBus(&SPID2);
            break;
#endif

#if STM32_SPI_USE_SPI3
        case 3:
            spiStop(&SPID3);
            SPI3_PAL.Driver = NULL;
            spiReleaseBus(&SPID3);
            break;
#endif

#if STM32_SPI_USE_SPI4
        case 4:
            spiStop(&SPID4);
            SPI4_PAL.Driver = NULL;
            spiReleaseBus(&SPID4);
            break;
#endif

#if STM32_SPI_USE_SPI5
        case 5:
            spiStop(&SPID5);
            SPI5_PAL.Driver = NULL;
            spiReleaseBus(&SPID5);
            break;
#endif

#if STM32_SPI_USE_SPI6
        case 6:
            spiStop(&SPID6);
            SPI6_PAL.Driver = NULL;
            spiReleaseBus(&SPID6);
            break;
#endif

        default:
            // the requested SPI bus is not valid
            return false;
    }

    return true;
}
